@@ -37,9 +37,6 @@ dnl Check for audiofile library
 dnl
 AM_PATH_AUDIOFILE(0.1.5,AC_DEFINE(HAVE_LIBAUDIOFILE))
 
-dnl utility conditional
-AM_CONDITIONAL(FALSE, test "x" = "y")
-
 ALL_LINGUAS="az es fr it nn no sk sv ta tr zh_TW"
 AM_GNOME2_GETTEXT
 gnomelocaledir='${prefix}/${DATADIRNAME}/locale'
