@@ -361,8 +361,8 @@ static struct poptOption gnomelib_options [] = {
 	  NULL, ARG_ENABLE_SOUND, N_("Enable sound server usage"), NULL},       
 
 	{ "espeaker", '\0', POPT_ARG_STRING,                                    
-	  NULL, ARG_ESPEAKER, N_("Host:port on which the sound server to use is 
-				 running"),
+	  NULL, ARG_ESPEAKER, N_("Host:port on which the sound server to use is"
+				 "running"),
 	  N_("HOSTNAME:PORT")},                                                 
 
 	{"version", '\0', POPT_ARG_NONE, NULL, },
