@@ -1,3 +1,7 @@
+2001-09-19  Frank Belew  <frb@ximian.com>
+
+	* configure.in: remove AM_CONDITIONAL that has no effect
+
 2001-09-18  Anders Carlsson  <andersca@gnu.org>
 
 	* Makefile.am (EXTRA_DIST): Add COPYING.LIB
